# forexmind

./: .env.example  .gitignore  C:Userswilson.wslconfig  README.md  build_deb.sh  pyproject.toml  requirements.txt
.github/workflows/: daily_retrain.yml
docs/: ForexMind_Architecture.pptx  ForexMind_TP_Fix_ClaudeCode_Brief_v1.0.docx  generate_architecture_pdf.py  generate_architecture_pptx.py  generate_next_steps.py
forexmind/: main.py  requirements.txt  scheduler.py
forexmind/ab_test/: canary.py  harness.py
forexmind/agents/: claude_agent.py  prompts.py  tools.py
forexmind/backtest/: engine.py
forexmind/config/: __init__.py  config.yaml  settings.py
forexmind/data/: cot_fetcher.py  database.py  models.py  monitors.json  news_aggregator.py  oanda_client.py  trade_repo.py
forexmind/indicators/: engine.py  scorer.py
forexmind/interfaces/: cli.py  telegram_bot.py
forexmind/models/: ppo_meta.npy
forexmind/monitoring/: __init__.py  auto_rollback.py  monitor.py
forexmind/risk/: manager.py  position_sizing.py
forexmind/strategy/: base.py  ensemble.py  feature_engineering.py  ml_strategy.py  rl_strategy.py  rule_based.py
forexmind/tests/: test_indicators.py  test_risk_strategy.py
forexmind/utils/: helpers.py  logger.py  session_times.py
package/: forexmind  forexmind.service  postinst.sh  postrm.sh  prerm.sh
practice/: README.md
practice/01_abc_protocols/: exercises.py  lesson.md  solutions.py
scripts/: ci_daily_retrain.py  slippage_analysis.py  walk_forward_backtest.py
tmp/: manual_retrain.py  sync_risk_manager.py  test_oanda_fetch.py
(+40 files in other folders)
